# course/gateway/go_gateway_demo/controller/admin.go
@@ -11,9 +11,12 @@ package controller
 import (
 	"encoding/json"
 	"fmt"
+	"go-examples/course/gateway/go_gateway_demo/dao"
 	"go-examples/course/gateway/go_gateway_demo/dto"
 	"go-examples/course/gateway/go_gateway_demo/middleware"
 	"go-examples/course/gateway/go_gateway_demo/public"
+
+	"github.com/e421083458/golang_common/lib"
 
 	"github.com/gin-gonic/contrib/sessions"
 
@@ -25,6 +28,7 @@ type AdminController struct{}
 func AdminRegister(group *gin.RouterGroup) {
 	admin := &AdminController{}
 	group.GET("/admin_info", admin.AdminInfo)
+	group.POST("/change_pwd", admin.ChangePwd)
 }
 
 // AdminInfo godoc
@@ -56,4 +60,58 @@ func (adminLogin *AdminController) AdminInfo(c *gin.Context) {
 		Roles:        []string{"admin"},
 	}
 	middleware.ResponseSuccess(c, out)
+}
+
+// ChangePwd godoc
+// @Summary 修改密码
+// @Description 修改密码
+// @Tags 管理员接口
+// @ID /admin/change_pwd
+// @Accept json
+// @Produce json
+// @Param body body dto.ChangePwdInput true "body"
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin/change_pwd [post]
+func (adminLogin *AdminController) ChangePwd(c *gin.Context) {
+	// input
+	params := &dto.ChangePwdInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	// 1. session读取用户信息到结构体 sessInfo
+
+	sess := sessions.Default(c)
+	sessInfo := sess.Get(public.AdminSessionInfoKey)
+	adminSessionInfo := &dto.AdminSessionInfo{}
+	if err := json.Unmarshal([]byte(fmt.Sprint(sessInfo)), adminSessionInfo); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	// 2. sessInfo.ID 读取数据库信息 adminInfo
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	adminInfo := &dao.Admin{}
+	adminInfo, err = adminInfo.Find(c, tx, &dao.Admin{UserName: adminSessionInfo.UserName})
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+
+	// 3. params.password + adminInfo.salt saltPassword
+	saltPassword := public.GenSaltPassword(adminInfo.Salt, params.Password)
+
+	// 4. saltPassword ==> adminInfo.password 执行数据保存
+	adminInfo.Password = saltPassword
+	if err := adminInfo.Save(c, tx); err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+
+	middleware.ResponseSuccess(c, "")
 }
