# course/gateway/go_gateway_demo/dto/admin.go
@@ -8,7 +8,12 @@
 
 package dto
 
-import "time"
+import (
+	"go-examples/course/gateway/go_gateway_demo/public"
+	"time"
+
+	"github.com/gin-gonic/gin"
+)
 
 type AdminInfoOutput struct {
 	ID           int       `json:"id"`
@@ -17,4 +22,12 @@ type AdminInfoOutput struct {
 	Avatar       string    `json:"avatar"`
 	Introduction string    `json:"introduction"`
 	Roles        []string  `json:"roles"`
+}
+
+type ChangePwdInput struct {
+	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"` //密码
+}
+
+func (param *ChangePwdInput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, param)
 }
